# thick-denim

./: .gitignore  Lexing.and.Parsing.Overview.html  Lexing.and.Parsing.Overview.md  Makefile  README.rst  na-custom-fields.jsn  pyproject.toml  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst
scripts/: create-test-issue.py  delete-all-test-issues.py  delete-single-issue.py  get-custom-field-options.py  get-custom-fields.py  get-issue-from-na.py  get-issue-json.py  inspect-issue.py  link-issue.py  list-issue-link-types.py  list-issue-transitions.py  list-project-properties.py  list-statuses.py  list-tdx-tests.py  list-tst-tasks.py  port-tdx-issues-to-infra.py  transfer-issues-to-project.py  transfer-issues-without-epic-from-tdx-to-infra.py  transition-issue-to-status-of-tdx-equivalent.py
sig-code-quality/: 1-get-issues-with-pr-assigned.py
tests/: harnesses.py
tests/functional/: harnesses.py
tests/functional/github/: test_get_pull_requests.py
tests/functional/jira/: test_get_projects.py
tests/unit/: test_config.py  test_jira_parsing.py  test_lexer.py  test_parser.py
thick_denim/: base.py  errors.py  fs.py  javaobj.py  jiraobj.py  logs.py  meta.py  models.py  serialization.py  util.py
thick_denim/cli/: __init__.py
thick_denim/cli/commands/: __init__.py
thick_denim/config/: __init__.py  errors.py  util.py
thick_denim/jira/propertylang/: __init__.py  ast.py  base.py  lexer.py  parser.py
thick_denim/networking/github/: __init__.py  client.py  errors.py  models.py
thick_denim/ui/: __init__.py  apps.py
(+2 files in other folders)
